# libdfmc

./: Makefile.am  NOTICE  ReadMe_Base_Defines.txt  ReadMe_CBase_Defines.txt  ReadMe_Demo_Defines.txt  ReadMe_EGLHelper_Defines.txt  configure  configure.ac  dfmcframework.pc.in
include/: config.h  config.h.in
include/solution57/base/: BasicTypes.hpp  Config.hpp  Exceptions.hpp  Noncopyable.hpp  Pointers.hpp
include/solution57/base/getopt/: IOptionParser.hpp  Option.hpp  OptionParser.hpp  OptionUtil.hpp
include/solution57/base/graphics/: ColorUtil.hpp  RawBitmap.hpp  RawBitmapEx.hpp  RawBitmapUtil.hpp  RenderConfig.hpp  RenderWindowMode.hpp
include/solution57/base/io/: FileUtil.hpp
include/solution57/base/log/: Log.hpp  LogKeyValueStringBuilder.hpp  LogLocation.hpp  Logger.hpp
include/solution57/base/math/: Box.hpp  Math.hpp  Matrix.hpp  Point2.hpp  Rect.hpp  Rectangle.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/solution57/base/rtti/: TypeInfo.hpp
include/solution57/base/string/: ParseUtil.hpp
include/solution57/base/system/: HighResolutionTimer.hpp  ProcessAffinity.hpp  ScopedSystemMemoryAccess.hpp  SystemMemoryAccess.hpp
include/solution57/base/system/adapter/: ScopedSystemMemoryAccessDefault.hpp  ScopedSystemMemoryAccessLinux.hpp
include/solution57/base/thread/: LockGuard.hpp  Mutex.hpp  Thread.hpp
include/solution57/cbase/: BasicTypes.h  ParseString.h
include/solution57/cbase/getopt/: GetoptOptionC.h  OptionParseResult.h
include/solution57/demo/: ADemoApp.hpp  DemoAppConfig.hpp  DemoAppControlProxy.hpp  DemoAppController.hpp  DemoConfig.hpp  DemoDataProvider.hpp  DemoEnvironment.hpp  DemoState.hpp  GenericDemoFactory.hpp  ICustomDemoEnvironment.hpp  IDemo.hpp  IDemoApp.hpp  IDemoAppControl.hpp  IDemoAppFactory.hpp  IDemoAppParams.hpp  IDemoController.hpp  IDemoData.hpp  IDemoFactory.hpp
include/solution57/demo/directfb/: CustomDemoEnvironmentDirectFB.hpp  DemoDirectFB.hpp
include/solution57/demo/egl/: DemoEGL.hpp
include/solution57/demo/glut/: DemoGlut.hpp
include/solution57/eglhelper/: INativeWindow.hpp  NativeWindowManager.hpp
include/solution57/graphics/procedural/: IndexUtil.hpp  ModelBuilder.hpp  Quad.hpp  Torus.hpp  Util.hpp  VertexUtil.hpp
include/solution57/graphics/render3D/: CompiledShader.hpp  DataTypes.hpp  IndexBuffer.hpp  ShaderBase.hpp  ShaderCompiler.hpp  ShaderVertexConfig.hpp  Texture.hpp  TextureArea.hpp  TextureRect.hpp  TextureUtil.hpp  VertexBuffer.hpp  VirtualTextureRect.hpp  WindingOrder.hpp
include/solution57/graphics/render3D/shaders/: TextureShader.hpp  WhiteShader.hpp
include/solution57/graphics/render3D/util/: ModelRender.hpp  ModelRenderBasic.hpp  ModelRenderNormals.hpp  ModelRenderVB.hpp  SimpleModel.hpp
include/solution57/graphics/renderVG/: PathBuffer.hpp
src/dfmc/base/: Exceptions.cpp
src/dfmc/base/getopt/: OptionParser.cpp  OptionUtil.cpp
src/dfmc/base/graphics/: ColorUtil.cpp  RawBitmap.cpp  RawBitmapEx.cpp  RawBitmapUtil.cpp  RenderConfig.cpp
src/dfmc/base/io/: FileUtil.cpp
src/dfmc/base/log/: LogConfig.hpp  LogKeyValueStringBuilder.cpp  LogLocation.cpp  LogStringEncoder.cpp  LogStringEncoder.hpp  Logger.cpp
src/dfmc/base/log/adapter/: LogAdapter.hpp  LogAdapterCout.cpp
src/dfmc/base/math/: Box.cpp  Math.cpp  Matrix.cpp  Rect.cpp  Rectangle.cpp
src/dfmc/base/rtti/: TypeInfo.cpp
src/dfmc/base/string/: ParseUtil.cpp
src/dfmc/base/system/: HighResolutionTimer.cpp  ProcessAffinity.cpp  SystemMemoryAccess.cpp
src/dfmc/base/system/adapter/: ScopedSystemMemoryAccessLinux.cpp
src/dfmc/base/thread/: Thread.cpp
src/dfmc/cbase/: ParseString.c
src/dfmc/demo/: ADemoApp.cpp  DemoAppController.cpp  DemoConfig.cpp  DemoDataProvider.cpp
src/dfmc/demo/directfb/: DemoDirectFB.cpp
src/dfmc/demo/egl/: DemoEGL.cpp
src/dfmc/demo/glut/: DemoGlut.cpp
src/dfmc/devmem2/: devmem2.c
src/dfmc/eglhelper/: NativeWindowManager.cpp
src/dfmc/eglhelper/androidlinux/: NativeWindowAndroidLinux.cpp  NativeWindowAndroidLinux.hpp
src/dfmc/eglhelper/directfb/: NativeWindowDirectFB.cpp  NativeWindowDirectFB.hpp
src/dfmc/eglhelper/surfaceflinger/: NativeWindowSurfaceFlinger.cpp  NativeWindowSurfaceFlinger.hpp
src/dfmc/eglhelper/win32/: NativeWindowWin32.cpp  NativeWindowWin32.hpp
src/dfmc/eglhelper/x11/: NativeWindowX11.cpp  NativeWindowX11.hpp
src/dfmc/graphics/procedural/: IndexUtil.cpp  ModelBuilder.cpp  Quad.cpp  Torus.cpp  Util.cpp  VertexUtil.cpp
src/dfmc/graphics/render3D/: CompiledShader.cpp  IndexBuffer.cpp  ShaderBase.cpp  ShaderCompiler.cpp  SimpleModel.cpp  Texture.cpp  TextureArea.cpp  TextureRect.cpp  TextureUtil.cpp  VertexBuffer.cpp  VirtualTextureRect.cpp
src/dfmc/graphics/render3D/gl/: GLCheck.hpp  GLUtil.cpp  GLUtil.hpp
src/dfmc/graphics/render3D/shaders/: TextureShader.cpp  WhiteShader.cpp
src/dfmc/graphics/render3D/util/: ModelRender.cpp  ModelRenderBasic.cpp  ModelRenderNormals.cpp  ModelRenderVB.cpp
src/dfmc/graphics/renderVG/: PathBuffer.cpp
src/libstresstest/: test_process.c
test/: .S57FrameworkUnitTest.sln  .S57FrameworkUnitTest.vcxproj  .S57FrameworkUnitTest.vcxproj.filters  main.cpp
test/src/cbase/: ParseString_unittest.cpp
win32/src/: getopt.c
